--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.344.0",
+    "netlify-cli": "^22.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
