--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "git": "^0.1.5",
     "lucide-react": "^0.344.0",
     "netlify-cli": "^22.2.1",
     "react": "^18.3.1",
