--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
   NODE_VERSION = "18"
   NPM_VERSION = "9"
 
-# CRITICAL FIX: Additional configuration for clean URLs
+# Additional configuration for clean URLs and performance
 [[headers]]
   for = "/*"
   [headers.values]
@@ -35,3 +35,6 @@
   for = "*.css"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+# FIXED: Remove hardcoded domain references
+# The app will now work with any deployment URL (Netlify, Vercel, etc.)
